Add support for page layouts to display different data on pages more easily

--- a/templates/default.html
+++ b/templates/default.html
@@ -5,6 +5,9 @@
     <title>{{title}}</title>
   </head>
   <body>
-    <h1>Quake Seeds</h1>
+    {{{content}}}
+
+    <script type="text/javascript" src="js/main.js">
+    </script>
   </body>
 </html>
