--- a/templates/partials/seeds.html
+++ b/templates/partials/seeds.html
@@ -1,5 +1,10 @@
-<ol>
-  {{#each seeds}}
-    <li>{{this.name}} –– {{this.rating}}</li>
-  {{/each}}
-</ol>
+{{#if seeds.length}}
+  <ol>
+    {{#each seeds}}
+      <li>{{this.name}} –– {{this.rating}}</li>
+    {{/each}}
+  </ol>
+{{else}}
+  <h1>No seeds available; is the check in done yet?</h1>
+  <a href="/">Go back</a>
+{{/if}}
