--- a/templates/partials/index.html
+++ b/templates/partials/index.html
@@ -1,4 +1,4 @@
 <h1>Quake Seeds</h1>
 
-<input type="text" placeholder="Battlefy URL or ID" class="id">
+<input type="text" placeholder="Battlefy URL or ID" class="id" onkeyup="onKeyUp(event)">
 <button type="button" name="button" class="btn" onclick="goToSeeds()">Get seeds</button>
