Add initial styles to make the app a bit more pretty

--- a/templates/default.html
+++ b/templates/default.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>{{title}}</title>
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
+    <header></header>
     {{{content}}}
 
     <script type="text/javascript" src="js/main.js">
