--- a/templates/default.html
+++ b/templates/default.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>{{title}}</title>
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
