Add warning to avoid misusing seeds when check-in hasn't finished yet

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -120,3 +120,13 @@ main {
   justify-content: space-between;
   align-items: flex-start;
 }
+
+.warning {
+  display: block;
+  font-size: 16px;
+  padding: 15px;
+  color: #fff;
+  background: #333;
+  margin-bottom: 15px;
+  border-left: 10px solid #cc002c;
+}
