--- a/templates/partials/index.html
+++ b/templates/partials/index.html
@@ -1,4 +1,11 @@
 <section>
   <input type="text" placeholder="Battlefy URL or ID" class="id" onkeyup="onKeyUp(event)">
+
+  <span class="separator"><span>or add players manually</span></span>
+
+  <div class="players">
+    <input type="text" placeholder="Player name, e.g. rapha" class="name" onkeyup="onKeyUpName(event)">
+  </div>
+
   <button type="button" name="button" class="btn" onclick="goToSeeds()">Get seeds</button>
 </section>
