Inputted player name should be fetch from API and seeded by the rating

--- a/templates/partials/index.html
+++ b/templates/partials/index.html
@@ -4,8 +4,10 @@
   <span class="separator"><span>or add players manually</span></span>
 
   <div class="players">
+
+
     <input type="text" placeholder="Player name, e.g. rapha" class="name" onkeyup="onKeyUpName(event)">
   </div>
-
+  <span class="notice">Note: names must be case-sensitive</span>
   <button type="button" name="button" class="btn" onclick="goToSeeds()">Get seeds</button>
 </section>
