--- a/static/css/main.css
+++ b/static/css/main.css
@@ -117,7 +117,7 @@ header {
 main {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: flex-start;
 }
 
@@ -162,4 +162,14 @@ main {
 
 .players input {
   margin-bottom: 10px;
+}
+
+.notice {
+  display: block;
+  font-size: 16px;
+  padding: 15px;
+  color: #fff;
+  background: #202020;
+  margin: 15px 0;
+  font-style: italic;
 }
