--- a/templates/default.html
+++ b/templates/default.html
@@ -10,6 +10,12 @@
     <header></header>
     {{{content}}}
 
+    <footer>
+      <a href="/about">About</a>
+      <a href="https://gitlab.com/laznic/quake-seeds">Contact</a>
+      <span class="copy">&copy; 2018 quakeseeds.com. All rights reserved.</span>
+    </footer>
+
     <script type="text/javascript" src="js/main.js">
     </script>
   </body>
