--- a/templates/partials/index.html
+++ b/templates/partials/index.html
@@ -1,11 +1,11 @@
 <section>
+  <span class="intro">A tool to help you seed Quake Champion players based on their ELO rating. Start by using a</span>
+
   <input type="text" placeholder="Battlefy URL or ID" class="id" onkeyup="onKeyUp(event)">
 
   <span class="separator"><span>or add players manually</span></span>
 
   <div class="players">
-
-
     <input type="text" placeholder="Player name, e.g. rapha" class="name" onkeyup="onKeyUpName(event)">
   </div>
   <span class="notice">Note: names must be case-sensitive</span>
