--- a/templates/default.html
+++ b/templates/default.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <header></header>
+    <a href="/" class="header">
+      <header></header>
+    </a>
+
     {{{content}}}
 
     <footer>
