Fix typos in content texts

--- a/templates/partials/about.html
+++ b/templates/partials/about.html
@@ -1,6 +1,6 @@
 <section class="about">
   <p>
-    If you're running a Quake Champions tournament, whether on Battlefy or just by yourself, every minute counts. Using this tool helps you quickly to determine player seeds based on their ELO rating.
+    If you're running a Quake Champions tournament, whether on Battlefy or just by yourself, every minute counts. Using this tool helps you quickly to determine player seeds based on their Elo rating.
   </p>
 
   <p>
@@ -14,7 +14,7 @@
 
   <p>
     In the case of Battlefy URL or ID, the app fetches the tournament information and all the registered players and for each player, it uses the <a href="https://stats.quake.com">Stats site</a>
-    to get the player ratings. Then it sorts the players from the highest ELO to the lowest in a numerical order, creating our seeds. The app will display both registered and checked-in players
+    to get the player ratings. Then it sorts the players from the highest Elo to the lowest in a numerical order, creating our seeds. The app will display both registered and checked-in players
     in the same view and a warning will be shown if the check-in has started but not finished, prompting that the results are not final and shouldn't be used.
   </p>
 
