--- a/templates/partials/index.html
+++ b/templates/partials/index.html
@@ -1,5 +1,5 @@
 <section>
-  <span class="intro">A tool to help you seed Quake Champion players based on their ELO rating. Start by using a</span>
+  <span class="intro">A tool to help you seed Quake Champion players based on their Elo rating. Start by using a</span>
 
   <input type="text" placeholder="Battlefy URL or ID" class="id" onkeyup="onKeyUp(event)">
 
