Add some extra meta tags

--- a/templates/404.html
+++ b/templates/404.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="description" content="A tool for Quake Champions tournaments to quickly create seedings based on player Elo ratings">
+    <meta name="keywords" content="quake champions, quake, seedings, esports, battlefy">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{title}}</title>
     <link rel="shortcut icon" type="image/png" href="img/favicon.png">
     <link rel="stylesheet" href="css/main.css">
