#2 - Add base templates to support 2v2 team adding

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -248,3 +248,36 @@ footer a:hover {
 .error-page .btn {
   margin-top: 50px;
 }
+
+.tabs {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 35px;
+}
+
+.tabs a {
+  padding: 10px 25px;
+  border-radius: 2px;
+  font-size: 24px;
+}
+
+.tabs a.active {
+  background: #fff;
+  color: #000;
+  font-weight: 800;
+}
+
+.tabs a:not(.btn)::after {
+  display: none;
+}
+
+.team-members {
+  display: flex;
+  justify-content: space-between;
+}
+
+.team-members input {
+  width: 48%;
+}
