#2 - Add 2v2 specific JS to add inputs properly

--- a/templates/partials/index.html
+++ b/templates/partials/index.html
@@ -25,11 +25,11 @@
 
     <div class="players">
       <div class="team">
-        <input type="text" placeholder="Team name, e.g. Team Liquid" class="team-name" onkeyup="onKeyUpName(event)">
+        <input type="text" placeholder="Team name, e.g. Team Liquid" class="team-name" onkeyup="onKeyUpTeam(event)">
 
         <div class="team-members">
-          <input type="text" placeholder="Player name" class="name" onkeyup="onKeyUpName(event)">
-          <input type="text" placeholder="Player name" class="name" onkeyup="onKeyUpName(event)">
+          <input type="text" placeholder="Player name" class="player-1" onkeyup="onKeyUpTeam(event)">
+          <input type="text" placeholder="Player name" class="player-2" onkeyup="onKeyUpTeam(event)">
         </div>
       </div>
     </div>
