--- a/templates/partials/index.html
+++ b/templates/partials/index.html
@@ -16,7 +16,7 @@
     <div class="players">
       <input type="text" placeholder="Player name, e.g. rapha" class="name" onkeyup="onKeyUpName(event)">
     </div>
-    <span class="notice">Note: names must be case-sensitive</span>
+    <span class="notice">Note: names must be case-sensitive; they need to match names in stats.quake.com</span>
     <button type="button" name="button" class="btn" onclick="goToSeeds()">Get seeds</button>
   {{else}}
     <input type="text" placeholder="Battlefy URL or ID" class="id" onkeyup="onKeyUp(event)">
@@ -33,7 +33,7 @@
         </div>
       </div>
     </div>
-    <span class="notice">Note: player names must be case-sensitive</span>
+    <span class="notice">Note: player names must be case-sensitive; they need to match names in stats.quake.com</span>
     <button type="button" name="button" class="btn" onclick="goToSeeds()">Get seeds</button>
   {{/isDuel}}
 
