#2 - Clicking get seeds should then pass team data in proper form to the API

--- a/templates/partials/index.html
+++ b/templates/partials/index.html
@@ -34,7 +34,7 @@
       </div>
     </div>
     <span class="notice">Note: player names must be case-sensitive; they need to match names in stats.quake.com</span>
-    <button type="button" name="button" class="btn" onclick="goToSeeds()">Get seeds</button>
+    <button type="button" name="button" class="btn" onclick="goToTeamSeeds()">Get seeds</button>
   {{/isDuel}}
 
 </section>
