#2 - Seedings needed some stylings to make 2v2 teams look nicer in the listing

--- a/templates/partials/players-seeds.html
+++ b/templates/partials/players-seeds.html
@@ -3,9 +3,19 @@
     <main>
       <div>
         <h1>Player seeding</h1>
-        <ol>
+        <ol {{#unless isDuel}}class="teams"{{/unless}}>
           {{#each seeds}}
-            <li><a href={{this.url}} target="_blank">{{this.name}} –– {{this.rating}}</a></li>
+            {{#if isDuel}}
+              <li><a href={{this.url}} target="_blank">{{this.name}} –– {{this.rating}}</a></li>
+            {{else}}
+            <li>
+              <span>{{this.name}} –– {{this.rating}}</span>
+              {{#each this.players}}
+                <a href={{this.url}} target="_blank">{{this.name}}</a>
+                <br>
+              {{/each}}
+            </li>
+            {{/if}}
           {{/each}}
         </ol>
       </div>
