--- a/static/css/main.css
+++ b/static/css/main.css
@@ -297,3 +297,17 @@ footer a:hover {
 .team-name::placeholder {
   font-weight: 400;
 }
+
+ol.teams span {
+  display: block;
+  width: 100%;
+}
+
+ol.teams a {
+  font-size: 16px;
+}
+
+ol.teams li {
+  line-height: 1.15;
+  margin-bottom: 15px;
+}
