--- a/templates/partials/battlefy-seeds.html
+++ b/templates/partials/battlefy-seeds.html
@@ -9,9 +9,19 @@
     <main>
       <div>
         <h1>Registered players</h1>
-        <ol>
+        <ol {{#unless isDuel}}class="teams"{{/unless}}>
           {{#each seeds}}
-            <li><a href={{this.url}} target="_blank">{{this.name}} –– {{this.rating}}</a></li>
+            {{#if isDuel}}
+              <li><a href={{this.url}} target="_blank">{{this.name}} –– {{this.rating}}</a></li>
+            {{else}}
+            <li>
+              <span>{{this.name}} –– {{this.rating}}</span>
+              {{#each this.players}}
+                <a href={{this.url}} target="_blank">{{this.name}}</a>
+                <br>
+              {{/each}}
+            </li>
+            {{/if}}
           {{/each}}
         </ol>
       </div>
@@ -19,10 +29,20 @@
       <div>
         <h1>Checked in players</h1>
 
-        <ol>
+        <ol {{#unless isDuel}}class="teams"{{/unless}}>
           {{#each seeds}}
             {{#if this.checkedInAt}}
-              <li><a href={{this.url}} target="_blank">{{this.name}} –– {{this.rating}}</a></li>
+              {{#if isDuel}}
+                <li><a href={{this.url}} target="_blank">{{this.name}} –– {{this.rating}}</a></li>
+              {{else}}
+              <li>
+                <span>{{this.name}} –– {{this.rating}}</span>
+                {{#each this.players}}
+                  <a href={{this.url}} target="_blank">{{this.name}}</a>
+                  <br>
+                {{/each}}
+              </li>
+              {{/if}}
             {{/if}}
           {{/each}}
         </ol>
