--- a/templates/partials/players-seeds.html
+++ b/templates/partials/players-seeds.html
@@ -2,14 +2,20 @@
   {{#if seeds.length}}
     <main>
       <div>
-        <h1>Player seeding</h1>
+        <h1>
+          {{#if isDuel}}
+            Player seeding
+          {{else}}
+            Team seeding
+          {{/if}}
+        </h1>
         <ol {{#unless isDuel}}class="teams"{{/unless}}>
           {{#each seeds}}
             {{#if isDuel}}
-              <li><a href={{this.url}} target="_blank">{{this.name}} –– {{this.rating}}</a></li>
+              <li><a href={{this.url}} target="_blank">{{this.name}} – {{this.rating}}</a></li>
             {{else}}
             <li>
-              <span>{{this.name}} –– {{this.rating}}</span>
+              <span>{{this.name}} – {{this.rating}}</span>
               {{#each this.players}}
                 <a href={{this.url}} target="_blank">{{this.name}}</a>
                 <br>
