--- a/templates/partials/battlefy-seeds.html
+++ b/templates/partials/battlefy-seeds.html
@@ -18,16 +18,16 @@
 
         <ol {{#unless isDuel}}class="teams"{{/unless}}>
           {{#each seeds}}
-            {{#if isDuel}}
+            {{#if ../isDuel}}
               <li><a href={{this.url}} target="_blank">{{this.name}} – {{this.rating}}</a></li>
             {{else}}
-            <li>
-              <span>{{this.name}} – {{this.rating}}</span>
-              {{#each this.players}}
-                <a href={{this.url}} target="_blank">{{this.name}}</a>
-                <br>
-              {{/each}}
-            </li>
+              <li>
+                <span>{{this.name}} – {{this.rating}}</span>
+                {{#each this.players}}
+                  <a href={{this.url}} target="_blank">{{this.name}}</a>
+                  <br>
+                {{/each}}
+              </li>
             {{/if}}
           {{/each}}
         </ol>
@@ -45,16 +45,16 @@
         <ol {{#unless isDuel}}class="teams"{{/unless}}>
           {{#each seeds}}
             {{#if this.checkedInAt}}
-              {{#if isDuel}}
+              {{#if ../isDuel}}
                 <li><a href={{this.url}} target="_blank">{{this.name}} – {{this.rating}}</a></li>
               {{else}}
-              <li>
-                <span>{{this.name}} – {{this.rating}}</span>
-                {{#each this.players}}
-                  <a href={{this.url}} target="_blank">{{this.name}}</a>
-                  <br>
-                {{/each}}
-              </li>
+                <li>
+                  <span>{{this.name}} – {{this.rating}}</span>
+                  {{#each this.players}}
+                    <a href={{this.url}} target="_blank">{{this.name}}</a>
+                    <br>
+                  {{/each}}
+                </li>
               {{/if}}
             {{/if}}
           {{/each}}
