--- a/templates/partials/players-seeds.html
+++ b/templates/partials/players-seeds.html
@@ -11,16 +11,16 @@
         </h1>
         <ol {{#unless isDuel}}class="teams"{{/unless}}>
           {{#each seeds}}
-            {{#if isDuel}}
+            {{#if ../isDuel}}
               <li><a href={{this.url}} target="_blank">{{this.name}} – {{this.rating}}</a></li>
             {{else}}
-            <li>
-              <span>{{this.name}} – {{this.rating}}</span>
-              {{#each this.players}}
-                <a href={{this.url}} target="_blank">{{this.name}}</a>
-                <br>
-              {{/each}}
-            </li>
+              <li>
+                <span>{{this.name}} – {{this.rating}}</span>
+                {{#each this.players}}
+                  <a href={{this.url}} target="_blank">{{this.name}}</a>
+                  <br>
+                {{/each}}
+              </li>
             {{/if}}
           {{/each}}
         </ol>
