--- a/lib/templates/partials/battlefy-seeds.html
+++ b/lib/templates/partials/battlefy-seeds.html
@@ -66,5 +66,6 @@
     <h1>No seeds available; is the check in done yet?</h1>
   {{/if}}
 
-  <a class="btn" href="/">Go back</a>
+  <a class="btn" href="/seeds/refresh">Refresh</a>
+  <a class="btn secondary" href="/">Go back</a>
 </section>
